# Hand-Handcontrol

./: README.md  setup.cfg
handcontrol/: __main__.py  setup.py
handcontrol/src/: demo.py  ui_App.py  ui_widgets.py
handcontrol/src/communication_framework/: Comframe.py  __init__.py  positions.py
