[metadata]
name = handcontrol-3DBionics
version = 1.0.0
author = 3D-Bionics
description = Software for controlling the 3D-Bionics Hand over a serial connection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3D-Bionics/Hand-Handcontrol
project_urls =
    Bug Tracker = https://github.com/3D-Bionics/Hand-Handcontrol/sissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    npyscreen
    pyserialtransfer
    windows_curses ; platform_system=="Windows"


[options.entry_points]
console_scripts =
    handcontrol = handcontrol.__main__:main

